--- a/ACL4SSR_Online_MultiCountry.ini
+++ b/ACL4SSR_Online_MultiCountry.ini
@@ -37,9 +37,9 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/CMBlog.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🕶  Bingous,https://github.com/wubushanyan/CF-Workers-SUB/raw/refs/heads/main/bingous.list
-ruleset=👓  Bingojp,https://github.com/wubushanyan/CF-Workers-SUB/raw/refs/heads/main/bingojp.list
-ruleset=🥽  Bingohk,https://github.com/wubushanyan/CF-Workers-SUB/raw/refs/heads/main/bingohk.list
+ruleset=🕶  Bingous,https://raw.githubusercontent.com/wubushanyan/CF-Workers-SUB/refs/heads/main/bingous.list
+ruleset=👓  Bingojp,https://raw.githubusercontent.com/wubushanyan/CF-Workers-SUB/refs/heads/main/bingojp.list
+ruleset=🥽  Bingohk,https://raw.githubusercontent.com/wubushanyan/CF-Workers-SUB/refs/heads/main/bingohk.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
