--- a/ACL4SSR_Online_MultiCountry.ini
+++ b/ACL4SSR_Online_MultiCountry.ini
@@ -37,14 +37,14 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/CMBlog.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🕶  Bingous,https://raw.githubusercontent.com/wubushanyan/CF-Workers-SUB/refs/heads/main/bingous.list
-ruleset=👓  Bingojp,https://raw.githubusercontent.com/wubushanyan/CF-Workers-SUB/refs/heads/main/bingojp.list
-ruleset=🥽  Bingohk,https://raw.githubusercontent.com/wubushanyan/CF-Workers-SUB/refs/heads/main/bingohk.list
+ruleset=🕶 Bingous,https://raw.githubusercontent.com/wubushanyan/CF-Workers-SUB/refs/heads/main/bingous.list
+ruleset=👓 Bingojp,https://raw.githubusercontent.com/wubushanyan/CF-Workers-SUB/refs/heads/main/bingojp.list
+ruleset=🥽 Bingohk,https://raw.githubusercontent.com/wubushanyan/CF-Workers-SUB/refs/heads/main/bingohk.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
@@ -58,15 +58,15 @@ custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🕶  Bingous`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=👓  Bingojp`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=🥽  Bingohk`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
+
+custom_proxy_group=🕶 Bingous`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=👓 Bingojp`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🥽 Bingohk`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
+
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🇭🇰 香港节点`load-balance`(港|HK|hk|Hong Kong|HongKong|hongkong|HKG)`http://www.gstatic.com/generate_204`300,,50
-;custom_proxy_group=🇯🇵 日本节点`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC)`http://www.gstatic.com/generate_204`300,,150
-
-
 
 enable_rule_generator=true
 overwrite_original_rules=true
